--- a/css/style.css
+++ b/css/style.css
@@ -134,3 +134,28 @@
     list-style-type: none;
     padding-left: 0;
   }
+  .search-box {
+    margin-bottom: 20px;
+  }
+  
+  .search-box input {
+    padding: 5px 10px;
+    margin-right: 10px;
+    font-size: 1rem;
+  }
+  
+  .search-box button {
+    padding: 5px 15px;
+    font-size: 1rem;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 5px;
+  }
+  
+  .search-box button:hover {
+    background-color: #45a049;
+  }
+  
